# santa_paravia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  paravia.py  pyproject.toml  requirements.txt
santa_paravia/: __init__.py  paravia.py
tests/paravia/: eventually_invade_test.py
