[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Filippo Carra", email = "filippo.carra+paravia@gmail.com" },
    ]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Games/Entertainment :: Turn Based Strategy",
        "Private :: Do Not Upload",
    ]
    dynamic = ["version", "description"]
    license = { file = "LICENSE" }
    name = "santa_paravia"
    readme = "README.rst"
    requires-python = ">=3.10"

    dependencies = [
        "rich ~=10.16",
    ]

    [project.optional-dependencies]
        dev = [
            "black",
            "commitizen",
            "flake8",
            "flake8-bugbear",
            "mypy",
            "pylint",
        ]
        doc = ["sphinx"]
        test = [
            "pytest",
        ]
