[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Filippo Carra", email = "filippo.carra+paravia@gmail.com" },
    ]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Games/Entertainment :: Turn Based Strategy",
    ]
    dynamic = ["version", "description"]
    license = { file = "LICENSE" }
    name = "santa_paravia"
    readme = "README.md"
    requires-python = ">=3.10"

    dependencies = [
        "rich ~=10.16",
    ]

    [project.optional-dependencies]
        dev = [
            "black",
            "commitizen",
            "flake8",
            "flake8-bugbear",
            "isort",
            "mypy",
            "pre-commit",
            "pylint",
        ]
        doc = ["sphinx"]
        test = [
            "pytest",
        ]

    [project.scripts]
        santa_paravia = "santa_paravia.paravia:main"

[tool]
    [tool.commitizen]
        annotated_tag            = true
        name                     = "cz_conventional_commits"
        tag_format               = "v$version"
        update_changelog_on_bump = true
        version                  = "0.1.0"
        version_files            = ["santa_paravia/__init__.py:__version__"]
